force-app/main/default/objects/ffr__ReportingDefinition__c/ffr__ReportingDefinition__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffr__helpreportingdefinition</customHelpPage>
    <label>Reporting Definition</label>
    <nameField>
        <label>Reporting Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>