force-app/main/default/objects/ffr__ReportingDefinition__c/fields/ffr__AllowExpandCollapse__c.field-meta.xml
<CustomField>
    <fullName>ffr__AllowExpandCollapse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Expand and Collapse</label>
    <type>Checkbox</type>
</CustomField>