force-app/main/default/objects/ffr__ReportingDefinition__c/fields/ffr__CompanyLogo__c.field-meta.xml
<CustomField>
    <fullName>ffr__CompanyLogo__c</fullName>
    <label>Logo Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>