force-app/main/default/objects/ffr__ReportingDefinition__c/fields/ffr__Description__c.field-meta.xml
<CustomField>
    <fullName>ffr__Description__c</fullName>
    <label>Description</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>