force-app/main/default/objects/ffr__ReportingDefinition__c/fields/ffr__DisplayCurrencySymbol__c.field-meta.xml
<CustomField>
    <fullName>ffr__DisplayCurrencySymbol__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Currency Symbol</label>
    <type>Checkbox</type>
</CustomField>