force-app/main/default/objects/ffr__ReportingDefinition__c/fields/ffr__ExcelTemplate__c.field-meta.xml
<CustomField>
    <fullName>ffr__ExcelTemplate__c</fullName>
    <label>Excel Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>