force-app/main/default/objects/ffr__ReportingDefinition__c/fields/ffr__Logo__c.field-meta.xml
<CustomField>
    <fullName>ffr__Logo__c</fullName>
    <formula>IF(LEN(ffr__CompanyLogo__c)=0,&quot;&quot;, IMAGE(&quot;/resource/ReportingUserImages/&quot;+ffr__CompanyLogo__c,&quot;Reporting Definition Logo&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo</label>
    <type>Text</type>
</CustomField>