force-app/main/default/objects/ffr__ReportingDefinition__c/fields/ffr__PrintChatterFeed__c.field-meta.xml
<CustomField>
    <fullName>ffr__PrintChatterFeed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Print Chatter Feed</label>
    <type>Checkbox</type>
</CustomField>