force-app/main/default/objects/ffr__ReportingDefinition__c/fields/ffr__PrintStyleSheet__c.field-meta.xml
<CustomField>
    <fullName>ffr__PrintStyleSheet__c</fullName>
    <label>Print Style Sheet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>