force-app/main/default/objects/ffr__ReportingDefinition__c/fields/ffr__ReportingDrillDefinition__c.field-meta.xml
<CustomField>
    <fullName>ffr__ReportingDrillDefinition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Drill Definition</label>
    <referenceTo>ffr__ReportingDefinition__c</referenceTo>
    <relationshipLabel>Reporting Definitions</relationshipLabel>
    <relationshipName>Reporting_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>