force-app/main/default/objects/ffr__ReportingDefinition__c/fields/ffr__StyleSheet__c.field-meta.xml
<CustomField>
    <fullName>ffr__StyleSheet__c</fullName>
    <label>View Style Sheet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>