force-app/main/default/objects/ffr__ReportingDefinition__c/fields/ffr__Title__c.field-meta.xml
<CustomField>
    <fullName>ffr__Title__c</fullName>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>