force-app/main/default/objects/ffr__ReportingDefinition__c/listViews/ffr__All.listView-meta.xml
<ListView>
    <fullName>ffr__All</fullName>
    <columns>NAME</columns>
    <columns>ffr__Title__c</columns>
    <columns>ffr__Description__c</columns>
    <columns>ffr__ReportingTemplate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ffr__PrintStyleSheet__c</columns>
    <columns>ffr__StyleSheet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>